syntax = "proto3";
package plugin;

option go_package = "k8s.io/apiserver/pkg/admission/plugin/wasm/validating/plugin";

// go:plugin type=plugin version=1
service Validation {
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message ValidateRequest {
  bytes admissionReview = 1;
}

message ValidateResponse {
  bytes admissionReview = 1;
}

// go:plugin type=host version=1
service Host {
  rpc Authorizer(SubjectAccessReviewSpec) returns (SubjectAccessReviewStatus) {}
  rpc Informer(InformerRequest) returns (InformerResponse) {}
}

// TODO this should look like SubjectAccessReviewSpec
message SubjectAccessReviewSpec {
  string username = 1;
  repeated string groups = 2;
  string verb = 3;
  string resource = 4;
}

message SubjectAccessReviewStatus {
  bool allowed = 1;
  string reason = 2;
}

message InformerRequest {
  string group = 1;
  string version = 2;
  string resource = 3;
  string namespace = 4;
  string name = 5;
}

message InformerResponse {
  string namespace = 1;
  string name = 2;
  string resourceVersion = 3;
  string creationTimestamp = 4;
  map<string, string> labels = 5;
}
